# mental-poker

./: .gitignore  Cargo.toml  Instrucciones.md  README.html  fda  inputs.json  send-receive-data.rs
babyjubjub/: Cargo.toml
babyjubjub/src/curves/: copy.rs  mod.rs  tests.rs
babyjubjub/src/fields/: mod.rs  tests.rs
barnett-smart-card-protocol/: Cargo.toml
barnett-smart-card-protocol/examples/: connect_texas_holdem.rs  connect_texas_holdem2.rs  listener_example.rs  parameter_selection.rs  patata.rs  reshuffle.rs  round.rs  texas_holdem.rs
barnett-smart-card-protocol/src/: error.rs  lib.rs
barnett-smart-card-protocol/src/discrete_log_cards/: mod.rs
circom-circuit/: card_cancellation.r1cs  card_cancellation.wasm  public  shuffling.wasm
circom-circuit/card_cancellation/: card_cancellation_v5.wasm
circom-circuit/others/: card_cancellation_extended.wasm  card_cancellation_v3.wasm  card_cancellation_v4.wasm
circom-circuit/shuffling/: shuffling.wasm
circom-circuit/sqrt/: sqrt.r1cs  sqrt.vk.json  sqrt.wasm  sqrt_0001.zkey
connect/: Cargo.toml
connect/src/: lib.rs
docs/: Comptatibility.md
identify/: Cargo.toml  Readme.md
identify/src/: main.rs
p2p-chat/: Cargo.toml
p2p-chat/examples/: client.rs  server.rs
p2p-connection/: Cargo.toml
p2p-connection/src/: copy  copy2  lib.rs
p2p-connection2/: Cargo.toml
p2p-connection2/examples/: connection2.rs
p2p-connection2/src/: lib.rs
p2p-connection3/: Cargo.toml
p2p-connection3/examples/: connection2.rs
p2p-connection3/src/: lib.rs
p2p-connection4/: Cargo.toml
p2p-connection4/examples/: testillo.rs  testillo2.rs
p2p-connection4/src/: lib.rs
p2p-neon/: Cargo.toml  callback-example.js  client.js  command.md  package-lock.json  package.json  poker-client.js  poker-client2.js  test.js
p2p-neon/cryptography-results/: poker_cryptography_community_0_0.json  poker_cryptography_community_0_1.json  poker_cryptography_community_0_2.json  poker_cryptography_community_1_0.json  poker_cryptography_community_1_1.json  poker_cryptography_community_1_2.json  poker_cryptography_shuffle_0.json  poker_cryptography_shuffle_1.json
p2p-neon/src/: lib.rs
p2p-neon/src/examples/: callback.rs  ejemplo.rs
p2p-web-assembly/: Cargo.toml  README.md
p2p-web-assembly/src/: lib.rs
proof-essentials/: Cargo.toml
proof-essentials/src/: error.rs
proof-essentials/src/homomorphic_encryption/: mod.rs
proof-essentials/src/homomorphic_encryption/el_gamal/: mod.rs
proof-essentials/src/vector_commitment/: mod.rs
proof-essentials/src/zkp/: mod.rs
proof-essentials/src/zkp/arguments/multi_exponentiation/: proof.rs  prover.rs
proof-essentials/src/zkp/arguments/shuffle/: proof.rs  prover.rs
proof-essentials/src/zkp/proofs/chaum_pedersen_dl_equality/: mod.rs  proof.rs  prover.rs
proof-essentials/src/zkp/proofs/schnorr_identification/: mod.rs  proof.rs  prover.rs
rendezvous/: Cargo.toml  Readme.md
rendezvous/src/: main.rs
texas-holdem/: Cargo.toml
texas-holdem/src/: lib.rs
webrtc_datachannel/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
webrtc_datachannel/src/: lib.rs
workspace-ark05/: cargo.toml
