[package]
name = "barnett-smart-card-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
anyhow = "1.0.55"
ark-crypto-primitives = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-marlin = "0.3.0"
ark-serialize = "0.3.0"
ark-std = { version = "0.3.0", features = ["std"] }
blake2 = { version = "0.9", default-features = false }
merlin = "3.0.0"
proof-essentials = {path = "../proof-essentials" }
rand = "0.8.4"
starknet-curve = { git = "https://github.com/geometryresearch/proof-toolbox.git"}
thiserror = "1.0.30"
babyjubjub = {path = "../babyjubjub"}
regex = "1.0.0"
zk-reshuffle = {path= "../zk-reshuffle"}
ark-bn254 = "0.5.0"
sha3 = "0.10"

ark-ed-on-bn254 = "0.3.0"

ff = {package="ff_ce" , version= "0.11", features = ["derive"]}
num = "0.4"
num-bigint = {version = "0.4", features = ["rand"]}
num-traits = "0.2.8"
generic-array = "1.2.0"
arrayref = "0.3.5"
lazy_static = "1.4.0"

libp2p = { version = "0.54", features = ["identify", "macros", "noise", "ping", "rendezvous", "tcp", "tokio", "yamux", "quic"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_chacha = "0.9.0" 


[dev-dependencies]
ark-bls12-377 = "0.3.0"
byte-unit = "4.0.14"



[[example]]
name = "round"
