[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.50", features = [ "noise", "yamux", "identify", "ping", "floodsub"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
