[package]
name = "p2p-connection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
libp2p = { version = "0.55", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing-subscriber = {version  = "0.3.19", features = ["env-filter"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-serialize = "0.3.0"
rand = "0.9"  