[package]
name = "p2p-neon"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
libp2p = { version = "0.55", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing-subscriber = {version  = "0.3.19", features = ["env-filter"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-serialize = "0.3.0"
rand = "0.8.4" 
rand_chacha = "0.9.0" 
rand_core = "0.9.0"
texas-holdem = { path = "../texas-holdem" }
barnett-smart-card-protocol = { path = "../barnett-smart-card-protocol" }
ark-std = "0.3.0"
ark-ff = "0.3.0"
babyjubjub = { path = "../babyjubjub" }
ark-ec = "0.3.0"
proof-essentials = { path = "../proof-essentials" }
zk-reshuffle = { path = "../zk-reshuffle" }
once_cell = "1.17"  
num-bigint = "0.4"
regex = "1.0"

