[package]
name = "p2p-web-assembly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "WebSocket", "RtcPeerConnection", "RtcDataChannel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
once_cell = "1.17"
base64ct = "1.7.3"