[package]
name = "rendezvous"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.54", features = ["identify", "macros", "noise", "ping", "rendezvous", "tcp", "tokio", "yamux"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = {version  = "0.3.19", features = ["env-filter"]}
