[package]
name = "webrtc_datachannel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.8"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.53"
base64ct = "=1.7.3"


web-sys = { version = "0.3.8", features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
] }

# Configuración específica para evitar problemas con externref
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = "s"
debug = false
overflow-checks = false
lto = false  # Deshabilitar LTO para evitar problemas
panic = 'abort'
incremental = false
codegen-units = 1